# shuntingyard

./: CMakeLists.txt  Design.md  Eval.cpp  Eval.h  Expression.cpp  Expression.h  ExpressionTest.cpp  Makefile  ParseOK-test.cpp  Parser.cpp  Parser.h  ParserOK-test.cpp  ParserTest.cpp  build.sh  eval.txt  example.txt  expressions.md  guck1.txt  guck2.txt  guck3.txt  guck4.txt  guck5.txt  guck6.txt  guck7.txt  guck9.txt  plan.txt  plan2.txt  precedence.txt  shunt.cpp  types.txt  vector.c  vector.h  vectortest.c
x/: X.md  expr.c  expr.x  string.x  test.x  types.x  vector.x
x/lib/C/: stdlib.x  string.x
x/lib/x/: Makefile  buffer.x  errors.cpp  errors.h  errors.x  strings.cpp  strings.h  strings.x  tokenizer.cpp  tokenizer.h  tokenizer.x
x/test/: c11atomics  c11atomics.c
